--- a/law-firm-website/styles/index.css
+++ b/law-firm-website/styles/index.css
@@ -631,4 +631,585 @@ footer i:hover {
 footer a {
   color: black;
 }
+
+@media screen and (max-width: 500px) {
+  header {
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 75px;
+    width: 100%;
+    max-width: 100%;
+    background-color: white;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  header a {
+    text-decoration: none;
+    color: #00305b;
+  }
+  header a:hover {
+    opacity: 50%;
+    -webkit-transition-duration: 0.5s;
+            transition-duration: 0.5s;
+  }
+  header .header-name {
+    width: 100%;
+    height: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+  }
+  header .header-name a {
+    margin: 0 auto;
+    display: inline-block;
+    padding: 0;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+  }
+  header .header-name i {
+    color: #41b7c4;
+  }
+  header nav {
+    width: 100%;
+    height: 50%;
+    display: block;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    text-align: center;
+  }
+  header nav a {
+    display: inline-block;
+    -ms-flex-preferred-size: none;
+        flex-basis: none;
+    text-align: center;
+    margin-top: 0;
+    padding-top: 0;
+    margin-right: 20px;
+  }
+  header nav i {
+    margin-right: 0.3rem;
+    color: #41b7c4;
+  }
+  main {
+    margin-top: 75px;
+    display: -ms-grid;
+    display: grid;
+    width: 100%;
+    -ms-grid-columns: (1fr)[12];
+        grid-template-columns: repeat(12 1fr);
+    -ms-grid-rows: (1fr)[7];
+        grid-template-rows: repeat(7 1fr);
+        grid-template-areas: " m " " s " " a " " i " " o " " c " " t ";
+  }
+  main .main-image {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    grid-area: m;
+    max-width: 100%;
+    height: auto;
+    min-height: 900px;
+  }
+  main .sectors {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    grid-area: s;
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+  }
+  main .about-us {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+    grid-area: a;
+  }
+  main .secondary-image {
+    -ms-grid-row: 4;
+    -ms-grid-column: 1;
+    grid-area: i;
+  }
+  main .our-lawyers {
+    -ms-grid-row: 5;
+    -ms-grid-column: 1;
+    grid-area: o;
+  }
+  main .contact {
+    -ms-grid-row: 6;
+    -ms-grid-column: 1;
+    grid-area: c;
+  }
+  main .to-up {
+    -ms-grid-row: 7;
+    -ms-grid-column: 1;
+    grid-area: t;
+  }
+  main .main-image {
+    background-image: url("../images/1.jpg");
+    background-size: cover;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    background-position: center;
+  }
+  main .main-image .color-name {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    height: 50%;
+    background-color: rgba(0, 48, 91, 0.5);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-negative: 1;
+        flex-shrink: 1;
+    -webkit-box-flex: 3;
+        -ms-flex-positive: 3;
+            flex-grow: 3;
+  }
+  main .main-image .color-name h1 {
+    display: block;
+    color: white;
+    font-size: 3rem;
+    width: 60%;
+    margin: 0 auto;
+    word-wrap: normal;
+  }
+  main .main-image .color-name p {
+    display: block;
+    color: white;
+    font-size: 1.5rem;
+    width: 60%;
+    margin: 2rem auto;
+  }
+  main .main-image .main-transparent {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    height: 50%;
+    background-color: transparent;
+    -ms-flex-negative: 3;
+        flex-shrink: 3;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+  main .sectors {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 10px;
+    padding-bottom: 3.5rem;
+  }
+  main .sectors .sectors-heading {
+    width: 100%;
+    display: block;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    text-align: center;
+  }
+  main .sectors .sectors-heading p {
+    font-size: 3rem;
+    display: inline-block;
+    text-transform: uppercase;
+    margin: 0 auto;
+    color: #00305b;
+  }
+  main .sectors .sectors-sections {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    text-align: center;
+  }
+  main .sectors .sectors-sections .material-icons {
+    color: #41b7c4;
+    display: inline;
+  }
+  main .sectors .sectors-sections .first-section {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-right: 0;
+  }
+  main .sectors .sectors-sections .first-section div {
+    margin-top: 2rem;
+    margin-right: 2%;
+  }
+  main .sectors .sectors-sections .first-section h2 {
+    font-size: 1.3rem;
+    display: inline;
+    font-weight: 500;
+  }
+  main .sectors .sectors-sections .first-section p {
+    font-size: 1.4rem;
+    margin-top: 2rem;
+  }
+  main .sectors .sectors-sections .second-section {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  main .sectors .sectors-sections .second-section div {
+    margin-top: 2rem;
+  }
+  main .sectors .sectors-sections .second-section h2 {
+    font-size: 1.3rem;
+    display: inline;
+    font-weight: 500;
+  }
+  main .sectors .sectors-sections .second-section p {
+    font-size: 1.3rem;
+    margin-top: 2rem;
+  }
+  main .about-us {
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+    background-color: #00305b;
+    color: white;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+    padding-bottom: 3.5rem;
+  }
+  main .about-us h3 {
+    font-size: 3rem;
+  }
+  main .about-us p {
+    font-size: 1.3rem;
+  }
+  main .about-us h3,
+  main .about-us p {
+    display: block;
+    width: 70%;
+  }
+  main .secondary-image {
+    width: 100%;
+    max-width: 100%;
+    height: 700px;
+    background-image: url("../images/2.jpg");
+    background-size: cover;
+  }
+  main .our-lawyers {
+    height: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+  main .our-lawyers h4 {
+    width: 100%;
+    height: auto;
+    text-align: center;
+    font-size: 3rem;
+    color: #00305b;
+  }
+  main .our-lawyers .lawyer {
+    width: 230px;
+    height: auto;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+  main .our-lawyers .lawyer a {
+    text-decoration: none;
+    color: #03325d;
+    font-style: italic;
+  }
+  main .our-lawyers .lawyer a:hover {
+    opacity: 50%;
+    -webkit-transition-duration: 0.5s;
+            transition-duration: 0.5s;
+  }
+  main .our-lawyers .lawyer img {
+    width: 100%;
+    height: 50%;
+  }
+  main .our-lawyers .lawyer p {
+    margin: 1rem;
+    text-align: center;
+  }
+  main .our-lawyers .lawyer .lawyer-name {
+    color: #03325d;
+    text-transform: uppercase;
+    font-size: 1.4rem;
+  }
+  main .our-lawyers .lawyer .lawyer-fonction {
+    text-transform: uppercase;
+    color: #41b7c4;
+    font-size: 1.3rem;
+  }
+  main .our-lawyers .lawyer hr {
+    background-color: #41b7c4;
+    height: 1px;
+    border: none;
+  }
+  main .our-lawyers .lawyer .lawyer-tel {
+    color: #03325d;
+    font-size: 1.1rem;
+  }
+  main .our-lawyers .lawyer .lawyer-email {
+    color: #03325d;
+    font-size: 1.1rem;
+  }
+  main .contact {
+    width: 100%;
+    height: auto;
+    background-image: url("../images/6.jpg");
+    background-size: cover;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+  main .contact .background-one {
+    background-color: rgba(0, 48, 91, 0.5);
+    height: 100%;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  main .contact .background-one .background-two {
+    width: 100%;
+    height: 50%;
+    background-color: rgba(0, 48, 91, 0.5);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-preferred-size: 40%;
+        flex-basis: 40%;
+    -ms-flex-negative: 1;
+        flex-shrink: 1;
+    -webkit-box-flex: 2;
+        -ms-flex-positive: 2;
+            flex-grow: 2;
+  }
+  main .contact .background-one .background-two > p {
+    text-transform: uppercase;
+    display: block;
+    font-size: 3rem;
+    color: white;
+    margin-right: 3rem;
+    word-break: normal;
+  }
+  main .contact .background-one .background-text {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    height: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-left: 3rem;
+    -ms-flex-negative: 2;
+        flex-shrink: 2;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+  main .contact .background-one .background-text .adress-heading {
+    font-size: 1.5rem;
+    text-transform: uppercase;
+  }
+  main .contact .background-one .background-text .adress {
+    font-size: 1.3rem;
+  }
+  main .contact .background-one .background-text .form-heading {
+    font-size: 1.3rem;
+  }
+  main .contact .background-one .background-text form {
+    width: 80%;
+    margin-bottom: 3rem;
+  }
+  main .contact .background-one .background-text form #name-contact {
+    height: 1.5rem;
+    width: 100%;
+    font-size: 1rem;
+  }
+  main .contact .background-one .background-text form #contact {
+    font-size: 1rem;
+    height: 1.5rem;
+    width: 100%;
+  }
+  main .contact .background-one .background-text form #comment {
+    font-size: 1rem;
+    width: 100%;
+  }
+  main .contact .background-one .background-text form #submit {
+    padding: 0.5rem 1rem;
+    font-size: 1.1rem;
+    background-color: #41b7c4;
+    border: none;
+    color: white;
+  }
+  main .contact .background-one .background-text form #submit:hover {
+    opacity: 80%;
+    -webkit-transition-duration: 0.5s;
+            transition-duration: 0.5s;
+    cursor: pointer;
+  }
+  main .contact .background-one .background-text > p {
+    color: white;
+    display: block;
+  }
+  main .contact .background-one .background-text a {
+    color: white;
+    text-decoration: none;
+    font-style: italic;
+  }
+  main .contact .background-one .background-text a:hover {
+    opacity: 50%;
+    -webkit-transition-duration: 0.5s;
+            transition-duration: 0.5s;
+  }
+  main .to-up {
+    width: 100%;
+    max-width: 100%;
+    background-color: #00305b;
+    color: white;
+    height: 80px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  main .to-up a {
+    color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+  }
+  main .to-up span {
+    margin-top: 0.5rem;
+    display: block;
+    font-size: 1.5rem;
+  }
+  main .to-up P {
+    display: block;
+    text-transform: uppercase;
+    font-size: 1rem;
+    padding: 0 auto;
+    margin: 0 auto 1.5rem auto;
+  }
+  footer {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    color: #03325d;
+  }
+  footer p {
+    float: left;
+    font-size: 0.9rem;
+    margin-top: 0.8rem;
+    margin-left: 3%;
+  }
+  footer i {
+    float: right;
+    font-size: 1.5rem;
+    margin: 1rem;
+  }
+  footer i:hover {
+    opacity: 80%;
+    -webkit-transition-duration: 0.5s;
+            transition-duration: 0.5s;
+    cursor: pointer;
+  }
+  footer a {
+    color: black;
+  }
+}
 /*# sourceMappingURL=index.css.map */
