--- a/auto-repair-shop-website/styles/index.scss
+++ b/auto-repair-shop-website/styles/index.scss
@@ -578,29 +578,750 @@ footer{
 
 
 @media screen and (min-width: 600px) and (max-width: 1024px) {
+  header {
+    justify-content: space-between;
+    #a-city {
+      display: none;
+    }
+    #a-tel {
+      font-size: 1.2rem;
+    }
+    #header-about {
+     display: none;
+    }
+  }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  #first-section{
+    #img-car {
+      position: absolute;
+      z-index: 0;
+      right: 0;
   
+    }
+  }
+
+
+
+
+
+
+
+
+
+
+
+  #section-form {
+    p {
+      width: 90%;//
+      text-align: center;//
+    }
+    #first-hr {
+      width: 90%;//
+    }
+    #div-select {
+      width: 90%;//
+      select {
+        width: 50%;//
+      }
+    }
+    #second-hr {
+      width: 90%;//
+      margin-left: 5%;//
+    }
+  #div-select-date{
+    width: 90%;//
+  }
+  #div-hours{
+    width: 90%;//
+  }
+  }
+
+  #section-partenaires{
+    .partenaires{
+      width: 100%;//
+      flex-direction: column;//
+      justify-content: center;//
+      flex-wrap: no-wrap;//
+      div{
+        // margin-bottom: 2rem;
+        margin: 20px auto;//  
+      }
+    }
+  }
+
+  footer{
+    background-color: #111525;
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    color: $main-color;
+  
+    .first-footer{
+      border-bottom: 1px solid #6a6765;
+      display: flex;
+      justify-content: space-between;
+      p{
+        font-size: 2rem;
+        padding: 2rem 5rem;
+      }
+      a{
+        color: $main-color;
+        display: block;
+        font-size: 1.8rem;
+        text-decoration: none;
+      }
+    }
+    .second-footer{
+      .sec-f-second{
+      .fir-icons{
+        i{
+          font-size: 1.5rem;//
+          border: 1px solid #6a6765;
+          width: 20px;//
+          height: 20px;//
+        }
+      }
+  
+      .sec-icons{
+        i{
+          font-size: 1.5rem;//
+          width: 20px;//
+          height: 20px;//
+        }
+      }
+      }
+    }
+    
+  
+  
+  
+  }
+
+}
+
+
+
+@media screen and (min-width: 100px) and (max-width: 600px) {
+  html {
+    padding: 0;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    scroll-behavior: smooth;
+    max-width: 100vw;///////
+  }
+  
+  body {
+    padding: 0;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    scroll-behavior: smooth;
+    max-width: 100vw;/////////
+  }
+  
+  @mixin gradient {
+    background: rgb(254, 64, 25);
+    background: linear-gradient(90deg, rgba(254, 64, 25, 1) 0%, rgba(255, 134, 55, 1) 100%);
+  }
+  
+  @mixin inserve-gradient {
+    background: rgb(255, 95, 55);
+    background: linear-gradient(90deg, rgba(255, 95, 55, 1) 0%, rgba(254, 64, 25, 1) 100%);
+  }
+  
+  @mixin box-shadow {
+    box-shadow: 18px 15px 24px -11px rgba(0, 0, 0, 0.73);
+    -webkit-box-shadow: 18px 15px 24px -11px rgba(0, 0, 0, 0.73);
+    -moz-box-shadow: 18px 15px 24px -11px rgba(0, 0, 0, 0.73);
+  }
+  
+  
+  
+  $main-color : white;
+  
+  main {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    max-width: 100%;//////////
+    height: auto;
+  
+  }
+  
+  header {
+    background-color: transparent;
+    max-width: 100%;
+    min-width: 100%;
+    height: 80px;
+    position: fixed;
+    z-index: 9999;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    align-items: baseline;
+  
+    h1 {
+      color: $main-color;
+      text-transform: uppercase;
+      margin-left: 30px;
+      cursor: pointer;
+      font-size: 1.5rem;////////
+      
+
+    }
+  
+  
+    #a-city {
+display: none;/////////////
+      margin-left: auto;
+      margin-right: 100px;
+      font-size: 1.2rem;
+      text-decoration: underline;
+    }
+  
+    #a-tel {
+      font-size: 1rem;
+      margin-right: 50px;
+      word-break: normal;
+    
+    }
+  
+  
+  
+    a {
+      text-decoration: none;
+      display: block;
+  
+      justify-self: flex-end;
+  
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: $main-color;
+    }
+  
+    #header-about {
+   
+      background-color: transparent;
+      border: 1px solid white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 10px 30px;
+      margin-right: 60px;
+      color: $main-color;
+      word-wrap: normal;
+      display: none;/////////////////////
+    }
+  
+    #header-about:hover {
+      @include inserve-gradient();
+      cursor: pointer;
+  
+    }
+  
+  
+  }
+  
+  #first-section {
+    @include gradient();
+    max-width: 100%;
+    min-height: 100vh;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  
+    h2,
+    h3 {
+      font-size: 4rem;
+      margin: 10px 0;
+      color: $main-color;
+      z-index: 100;
+      text-align: center;
+    }
+  
+    h2 {
+      font-size: 3rem;//////////
+      margin-top: 50%;
+      font-weight: 300;
+    }
+  
+    h3 {
+      font-size: 3rem;//////////
+      text-transform: uppercase;
+      font-size: 900;
+    }
+  
+    a{
+      text-decoration: none;
+      display: block;
+      margin-top: 50px;
+      background-color: transparent;
+      padding: 15px 40px;
+      border: 1px solid white;
+      border-radius: 100px;
+      font-size: 1.2rem;
+      font-weight: 700;
+      color: $main-color;
+      z-index: 100;
+      margin-bottom: 5rem;
+      // a{
+      //   color: $main-color;
+      //   text-decoration: none;
+      //   height: 100%;
+      //   width: 100%;
+      // }
+  
+    }
+  
+    a:hover {
+      @include box-shadow();
+      transition-duration: 0.5s;
+    }
+  
+    #img-car {
+      position: absolute;
+      z-index: 0;
+      right: 0%;///////
+      /////////
+      height: 500px;////////
+  
+    }
+  
+    //----------------------------------------------------------//
+    div.at-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 180px;
+      margin-top: auto;
+      margin-bottom: 1rem;
+    }
+  
+    .at-item {
+      width: 2px;
+      height: 150px;
+      background-color: white;
+      animation-name: shake-vertical;
+      animation-duration: 5s;
+      animation-timing-function: linear;
+      animation-delay: 0s;
+      animation-iteration-count: infinite;
+      animation-direction: normal;
+      animation-fill-mode: none;
+    }
+  
+    @keyframes shake-vertical {
+      0% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+      }
+  
+      10% {
+        -webkit-transform: translateY(-8px);
+        transform: translateY(-8px);
+      }
+  
+      20% {
+        -webkit-transform: translateY(8px);
+        transform: translateY(8px);
+      }
+  
+      30% {
+        -webkit-transform: translateY(-8px);
+        transform: translateY(-8px);
+      }
+  
+      40% {
+        -webkit-transform: translateY(8px);
+        transform: translateY(8px);
+      }
+  
+      50% {
+        -webkit-transform: translateY(-8px);
+        transform: translateY(-8px);
+      }
+  
+      60% {
+        -webkit-transform: translateY(8px);
+        transform: translateY(8px);
+      }
+  
+      70% {
+        -webkit-transform: translateY(-8px);
+        transform: translateY(-8px);
+      }
+  
+      80% {
+        -webkit-transform: translateY(6.4px);
+        transform: translateY(6.4px);
+      }
+  
+      90% {
+        -webkit-transform: translateY(-6.4px);
+        transform: translateY(-6.4px);
+      }
+  
+      100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+      }
+    }
+  
+    //------------------------------------------------------------//
+  
+  
+  
+  }
+  
+  
+  
+  #section-form {
+    width: 100%;
+    height: auto;
+    background-color: #252d45;
+  
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+  
+    h4 {
+      color: $main-color;
+      font-size: 2.3rem;
+      margin: 5rem 0;
+      font-weight: 200;
+      text-align: center;///////
+  
+    }
+  
+    p {
+      color: $main-color;
+      font-size: 1.3rem;
+      margin-bottom: 0;
+      display: block;
+      width: 90%;//////
+      text-align: center;///////
+  
+      span {
+        font-size: 1.5rem;
+      }
+    }
+  
+    #first-hr {
+      width: 90%;///////
+      display: block;
+      border: 1px solid #6a6765;
+    }
+  
+    #div-select {
+      width: 90%;//////////
+      display: flex;
+      align-items:center;//////
+      flex-direction: column;//
+      text-align: center;
+      select {
+        font-size: 1.2rem;
+        margin-top: 5rem;
+        display: block;
+        color: #9497a1;
+        background-color: #252d45;
+        width: 70%;/////////
+        border: none;
+        padding: 5px 10px;
+        outline: none;
+        margin-bottom: 1rem;////////
+  
+        option {
+          background-color: #171820;
+  
+          border: none;
+          outline: none;
+  
+        }
+  
+      }
+  
+  
+    }
+  
+    #second-hr {
+      width: 90%;///
+      margin-left: 25%;
+      margin: 0 auto;//////
+      display: block;
+      border: 1px solid #6a6765;
+      float: left;
+    }
+  
+  #div-select-date{
+    width: 90%;///////
+    display: flex;
+  justify-content: space-between;/////
+    color: #9497a1;
+    .selected-date{
+      background-color: orangered;
+      color: white;
+    }
+    .first-date{
+      margin-left: 0rem;////
+    }
+    div{
+      text-align: center;
+      padding: 0 10px;
+      border-radius: 50px;
+      border: 2px solid transparent;
+      margin-bottom: 0;
+      width: auto;
+    
+    }
+    div:hover{
+      color: white;
+      transition-duration: 0.5s;
+      cursor: pointer;
+      border: 2px solid orangered;
+    }
+  }
+  
+  #div-hours{
+    .selected-hour{
+      background-color: orangered;
+      color: white;
+    }
+   margin: 5rem 0;
+   height :2rem;
+    width: 90%;//////////////
+    color: #9497a1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    span{
+      padding: 5px 10px;
+      border-radius: 50px;
+      border: 2px solid transparent;
+    }
+    span:hover{
+      color: $main-color;
+      transition-duration: 0.5s;
+      cursor: pointer;
+      border: 2px solid orangered;
+    }
+  }
+  
+  
+  }
+  
+  
+  #section-partenaires{
+    width: 100%;
+    background-color: #161b26;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+  
+    h4{
+      color: $main-color;
+      text-align: center;
+      font-size: 2rem;
+      font-weight: 200;
+      margin-top: 10%; 
+    }
+    .partenaires{
+      width: 60%;
+      height: auto;
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 10%;
+      flex-wrap: wrap;
+    
+      div{
+        width: 300px;
+        height: 400px;
+        margin-bottom: 2rem;
+        border: 1px solid white;
+        border-radius: 20px;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content:  space-around;
+     
+        
+        h5{
+          color: $main-color;
+          font-size: 2.2rem;
+          font-weight: 500;
+          margin-left: 2rem;
+          margin: 0 2rem;
+        }
+        h6{
+          color: $main-color;
+          font-size: 1.6rem;
+          font-weight: 500;
+          margin-left: 2rem;
+          margin: 0 2rem;
+        }
+        p{
+          color: orangered;
+          margin-left: 2rem;
+          font-weight: 600;
+          position: relative;
+          margin: 0 2rem;
+          
+  
+        }
+        
+      }
+      div:hover{
+        background-color: orangered;
+        border: 1px solid orangered;
+        transition-duration: 0.8s;
+        top: -5px;
+        cursor: pointer;
+      }
+      div:hover p{
+        color: $main-color;
+      }
+    }
+  
+  
+  
+  }
+  
+  footer{
+    
+    background-color: #111525;
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    color: $main-color;
+    
+   
+  
+    .first-footer{
+      
+      border-bottom: 1px solid #6a6765;
+      display: flex;
+      justify-content: space-between;
+      p{
+        font-size: 1.2rem;////////
+        padding: 1rem 0rem 2rem 0.5rem;////////
+      }
+      a{
+        color: $main-color;
+        display: block;
+        font-size: 1.2rem;/////////
+        text-decoration: none;
+      }
+    }
+    .second-footer{
+      
+      border-bottom: 1px solid #6a6765;
+      .sec-f-first{
+        display: flex;
+        justify-content: space-around;
+        p{
+          padding: 0rem 0rem 0rem 1rem;/////////
+          font-size: 1rem;
+          
+          color: #6a6765;
+          text-transform: uppercase;
+        }
+        
+        
+        .apps{
+          padding-left: 6rem;
+        
+        }
+        
+      }
+      .sec-f-second{
+        display: flex;
+        justify-content: space-around;//////////
+  
+      .fir-icons{
+        padding-left: 1rem;///////////
+        margin-bottom: 3rem;
+        display: flex;///////
+        flex-direction: column;////////
+        i{
+          padding: 1rem;//////////
+          margin-right: 1rem;
+          font-size: 1.8rem;//////
+          color: #6a6765;
+          border: 1px solid #6a6765;
+          border-radius: 50%;
+          width: 35px;//////////
+          height: 35px;/////////
+          text-align: center;
+          margin-bottom: 0.5rem;//////////////
+          
+          
+          
+        }
+        i:hover{
+          background-color: orangered;
+          border: 1px solid orangered;
+          color: $main-color;
+          transition-duration: 0.5s;
+        
+        }
+      }
+  
+      .sec-icons{
+        padding-right: 1rem;/////////
+        display: flex;///////
+        flex-direction: column;////////
+        i{
+          padding: 1rem;///
+          margin-bottom: 0.5rem;/////////
+          font-size: 1.8rem;/////////
+          color: #6a6765;
+          border: 1px solid #6a6765;
+          border-radius: 50%;
+          margin-left: 0;///////
+          width: 35px;/////
+          height: 35px;///////
+          text-align: center;
+          
+          
+        }
+        i:hover{
+          background-color: orangered;
+          border: 1px solid orangered;
+          color: $main-color;
+          transition-duration: 0.5s;
+        
+        }
+      }
+  
+  
+      }
+    }
+    .third-footer{
+      border-bottom: 1px solid #6a6765;
+      p{
+        padding-left: 1rem;////////////
+        color: #6a6765;
+        font-size: 0.8rem;
+      }
+      a{
+        text-decoration: none;
+        color: greenyellow;
+      }
+    }
+  
+  
+  
+  }
+  
+
 }
