--- a/agence-immo/styles/contacts-styles.css
+++ b/agence-immo/styles/contacts-styles.css
@@ -179,7 +179,7 @@ body {
   border: none;
 }
 
-@media (min-width: 1px) and (max-width: 1030px) {
+@media screen and (min-width: 1px) and (max-width: 600px) {
   html, body {
     max-width: 100vw;
   }
