--- a/agence-immo/styles/location-styles.css
+++ b/agence-immo/styles/location-styles.css
@@ -130,7 +130,7 @@ p {
   border-top: 1px solid #969696;
 }
 
-@media (min-width: 1px) and (max-width: 1030px) {
+@media screen and (min-width: 1px) and (max-width: 600px) {
   html, body {
     max-width: 100vw;
   }
