--- a/picture only css/styles/index.css
+++ b/picture only css/styles/index.css
@@ -107,7 +107,7 @@ body {
   font-family: 'Roboto', sans-serif;
   width: 100vw;
   height: 100vh;
-  background-color: #ceedfc;
+  background-color: #c6e3fc;
 }
 
 .sky {
@@ -124,6 +124,105 @@ body {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+}
+
+.sky .cloud {
+  position: fixed;
+  top: 20%;
+  left: 75%;
+  background: white;
+  border-radius: 100px;
+  height: 5%;
+  width: 10%;
+}
+
+.sky .cloud:after, .sky .cloud:before {
+  background: #fff;
+  content: '';
+  position: absolute;
+  z-indeX: -1;
+}
+
+.sky .cloud:after {
+  border-radius: 100%;
+  height: 100%;
+  left: 15%;
+  top: -50%;
+  width: 40%;
+}
+
+.sky .cloud:before {
+  border-radius: 150%;
+  width: 40%;
+  height: 200%;
+  left: 45%;
+  top: -100%;
+}
+
+.sky .cloud-2 {
+  position: fixed;
+  top: 10%;
+  left: 45%;
+  background: white;
+  border-radius: 100px;
+  height: 5%;
+  width: 10%;
+}
+
+.sky .cloud-2:after, .sky .cloud-2:before {
+  background: #fff;
+  content: '';
+  position: absolute;
+  z-indeX: -1;
+}
+
+.sky .cloud-2:after {
+  border-radius: 100%;
+  height: 100%;
+  left: 15%;
+  top: -50%;
+  width: 40%;
+}
+
+.sky .cloud-2:before {
+  border-radius: 150%;
+  width: 40%;
+  height: 200%;
+  left: 45%;
+  top: -100%;
+}
+
+.sky .cloud-3 {
+  position: fixed;
+  top: 12%;
+  left: 25%;
+  background: white;
+  border-radius: 100px;
+  height: 5%;
+  width: 10%;
+}
+
+.sky .cloud-3:after, .sky .cloud-3:before {
+  background: #fff;
+  content: '';
+  position: absolute;
+  z-indeX: -1;
+}
+
+.sky .cloud-3:after {
+  border-radius: 100%;
+  height: 100%;
+  left: 15%;
+  top: -50%;
+  width: 40%;
+}
+
+.sky .cloud-3:before {
+  border-radius: 150%;
+  width: 40%;
+  height: 200%;
+  left: 45%;
+  top: -100%;
 }
 
 .sky .city-back {
@@ -786,6 +885,7 @@ body {
 }
 
 .sky .sun-block .sun {
+  z-index: 1000;
   width: 100%;
   height: 100%;
   border-radius: 50%;
