--- a/picture only css/styles/index.scss
+++ b/picture only css/styles/index.scss
@@ -59,6 +59,8 @@
 
 }
 
+
+
 html {
     scroll-behavior: smooth;
     padding: 0;
@@ -72,7 +74,7 @@ body {
     font-family: 'Roboto', sans-serif;
     width: 100vw;
     height: 100vh;
-     background-color: rgb(206, 237, 252);
+     background-color: rgb(198, 227, 252);
 
 }
 
@@ -84,6 +86,130 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+
+
+
+
+
+    //!!!!!!!!!!!!!!!!!!!!
+    //!!!!!!!!!!
+    
+
+        .cloud {
+            position: fixed;
+            top: 20%;
+            left: 75%;
+            
+            background: rgb(255, 255, 255);
+            border-radius: 100px;
+            height: 5%;
+            width: 10%;
+        }
+        
+        .cloud:after, .cloud:before {
+            background: #fff;
+            content: '';
+            position: absolute;
+            z-indeX: -1;
+        }
+        
+        .cloud:after {  
+            border-radius: 100%;
+            height: 100%;
+            left: 15%;
+            top: -50%;
+            width: 40%;
+        }
+        
+        .cloud:before {
+            border-radius: 150%;
+            width: 40%;
+            height: 200%;
+            left: 45%;
+            top: -100%;
+        }
+
+        .cloud-2{
+            position: fixed;
+            top: 10%;
+            left: 45%;
+            
+            background: rgb(255, 255, 255);
+            border-radius: 100px;
+            height: 5%;
+            width: 10%;
+        }
+        .cloud-2:after, .cloud-2:before {
+            background: #fff;
+            content: '';
+            position: absolute;
+            z-indeX: -1;
+        }
+        
+        .cloud-2:after {  
+            border-radius: 100%;
+            height: 100%;
+            left: 15%;
+            top: -50%;
+            width: 40%;
+        }
+        
+        .cloud-2:before {
+            border-radius: 150%;
+            width: 40%;
+            height: 200%;
+            left: 45%;
+            top: -100%;
+        }
+
+        .cloud-3{
+            position: fixed;
+            top: 12%;
+            left: 25%;
+            
+            background: rgb(255, 255, 255);
+            border-radius: 100px;
+            height: 5%;
+            width: 10%;
+        }
+        .cloud-3:after, .cloud-3:before {
+            background: #fff;
+            content: '';
+            position: absolute;
+            z-indeX: -1;
+        }
+        
+        .cloud-3:after {  
+            border-radius: 100%;
+            height: 100%;
+            left: 15%;
+            top: -50%;
+            width: 40%;
+        }
+        
+        .cloud-3:before {
+            border-radius: 150%;
+            width: 40%;
+            height: 200%;
+            left: 45%;
+            top: -100%;
+        }
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     .city-back {
         background-color: transparent;
@@ -588,6 +714,7 @@ body {
         top: 0;
 
         .sun {
+            z-index: 1000;
             width: 100%;
             height: 100%;
             border-radius: 50%;
